# prelegal-nik

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  catalog.json  docker-compose.yml
backend/: pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: DownloadButton.tsx  NdaForm.tsx  NdaPreview.tsx
frontend/src/lib/: auth.tsx  nda-template.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1
